--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   flutter_native_splash: ^2.2.17
+  encrypt: ^5.0.1
 
 
 flutter_native_splash:
