--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_native_splash: ^2.2.17
   encrypt: ^5.0.1
   flip_card: ^0.7.0
+  fast_rsa: ^3.5.3
+  # rsa_encrypt: ^2.0.0
 
 
 flutter_native_splash:
