--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   fast_rsa: ^3.5.3
   file_picker: ^5.2.5
   path_provider: ^2.0.12
+  flutter_svg: ^2.0.1
+  dotted_border: ^2.0.0+3
   # rsa_encrypt: ^2.0.0
 
 
@@ -73,7 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
